--- a/drivers/telephony/Kconfig
+++ b/drivers/telephony/Kconfig
@@ -39,7 +39,7 @@ config PHONE_IXJ
 
 config PHONE_IXJ_PCMCIA
 	tristate "QuickNet Internet LineJack/PhoneJack PCMCIA support"
-	depends on PHONE_IXJ
+	depends on PHONE_IXJ && PCMCIA
 	help
 	  Say Y here to configure in PCMCIA service support for the Quicknet
 	  cards manufactured by Quicknet Technologies, Inc.  This changes the
