[NET]: Makefile cleanups for net/.

--- a/net/bridge/Makefile
+++ b/net/bridge/Makefile
@@ -4,12 +4,10 @@
 
 obj-$(CONFIG_BRIDGE) += bridge.o
 
-bridge-objs	:= br.o br_device.o br_fdb.o br_forward.o br_if.o br_input.o \
+bridge-y	:= br.o br_device.o br_fdb.o br_forward.o br_if.o br_input.o \
 			br_ioctl.o br_notify.o br_stp.o br_stp_bpdu.o \
 			br_stp_if.o br_stp_timer.o
 
-ifeq ($(CONFIG_NETFILTER),y)
-bridge-objs	+= br_netfilter.o
-endif
+bridge-$(CONFIG_NETFILTER)	+= br_netfilter.o
 
 obj-$(CONFIG_BRIDGE_NF_EBTABLES) += netfilter/
