--- a/net/core/Makefile
+++ b/net/core/Makefile
@@ -4,14 +4,10 @@
 
 obj-y := sock.o skbuff.o iovec.o datagram.o scm.o
 
-ifeq ($(CONFIG_SYSCTL),y)
-ifeq ($(CONFIG_NET),y)
-obj-y += sysctl_net_core.o
-endif
-endif
+obj-$(CONFIG_SYSCTL) += sysctl_net_core.o
 
-obj-$(CONFIG_NET) += flow.o dev.o net-sysfs.o dev_mcast.o dst.o neighbour.o \
-		     rtnetlink.o utils.o link_watch.o filter.o
+obj-y		     += flow.o dev.o net-sysfs.o dev_mcast.o dst.o neighbour.o \
+			rtnetlink.o utils.o link_watch.o filter.o
 
 obj-$(CONFIG_NETFILTER) += netfilter.o
 obj-$(CONFIG_NET_DIVERT) += dv.o
