--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -28,7 +28,7 @@ config INPUT_PCSPKR
 
 config INPUT_SPARCSPKR
 	tristate "SPARC Speaker support"
-	depends on (SPARC32 || SPARC64) && INPUT && INPUT_MISC
+	depends on (SPARC32 || SPARC64) && INPUT && INPUT_MISC && PCI
 	help
 	  Say Y here if you want the standard Speaker on Sparc PCI systems
 	  to be used for bells and whistles.
