[PATCH] fs/ Makefile cleanup
Simplify Makefiles in fs/ by utilising the new syntax for composite
objects. The new syntax allowed a couple of ifeq ($(CONFIG_FOO),y)
to be deleted, resulting in more readable Makefiles.

No functional changes introduced.

--- a/fs/ext2/Makefile
+++ b/fs/ext2/Makefile
@@ -4,17 +4,9 @@
 
 obj-$(CONFIG_EXT2_FS) += ext2.o
 
-ext2-objs := balloc.o bitmap.o dir.o file.o fsync.o ialloc.o inode.o \
-	     ioctl.o namei.o super.o symlink.o
+ext2-y := balloc.o bitmap.o dir.o file.o fsync.o ialloc.o inode.o \
+	  ioctl.o namei.o super.o symlink.o
 
-ifeq ($(CONFIG_EXT2_FS_XATTR),y)
-ext2-objs += xattr.o xattr_user.o xattr_trusted.o
-endif
-
-ifeq ($(CONFIG_EXT2_FS_POSIX_ACL),y)
-ext2-objs += acl.o
-endif
-
-ifeq ($(CONFIG_EXT2_FS_SECURITY),y)
-ext2-objs += xattr_security.o
-endif
+ext2-$(CONFIG_EXT2_FS_XATTR)	 += xattr.o xattr_user.o xattr_trusted.o
+ext2-$(CONFIG_EXT2_FS_POSIX_ACL) += acl.o
+ext2-$(CONFIG_EXT2_FS_SECURITY)	 += xattr_security.o
