--- a/fs/devpts/Makefile
+++ b/fs/devpts/Makefile
@@ -4,12 +4,6 @@
 
 obj-$(CONFIG_DEVPTS_FS) += devpts.o
 
-devpts-objs := inode.o
-
-ifeq ($(CONFIG_DEVPTS_FS_XATTR),y)
-devpts-objs += xattr.o 
-endif
-
-ifeq ($(CONFIG_DEVPTS_FS_SECURITY),y)
-devpts-objs += xattr_security.o
-endif
+devpts-y := inode.o
+devpts-$(CONFIG_DEVPTS_FS_XATTR)	+= xattr.o 
+devpts-$(CONFIG_DEVPTS_FS_SECURITY)	+= xattr_security.o
