[PATCH] Rename ariadne2 to zorro8390
Rename ariadne2 to zorro8390, since this driver supports several NS8390-based
Zorro Ethernet cards. Kill all never used occurrencies of CONFIG_NE2K_ZORRO.

--- a/arch/ppc/configs/apus_defconfig
+++ b/arch/ppc/configs/apus_defconfig
@@ -421,8 +421,7 @@ CONFIG_NET_ETHERNET=y
 # CONFIG_MII is not set
 # CONFIG_OAKNET is not set
 CONFIG_ARIADNE=y
-# CONFIG_ARIADNE2 is not set
-CONFIG_NE2K_ZORRO=y
+# CONFIG_ZORRO8390 is not set
 CONFIG_A2065=y
 CONFIG_HYDRA=y
 # CONFIG_HAPPYMEAL is not set
