--- a/drivers/char/watchdog/Kconfig
+++ b/drivers/char/watchdog/Kconfig
@@ -207,10 +207,10 @@ config IB700_WDT
 	  will say N.
 
 config I810_TCO
-	tristate "Intel i810 TCO timer / Watchdog"
+	tristate "Intel i8xx TCO timer / Watchdog"
 	depends on WATCHDOG
 	---help---
-	  Hardware driver for the TCO timer built into the Intel i810 and i815
+	  Hardware driver for the TCO timer built into the Intel i8xx
 	  chipset family.  The TCO (Total Cost of Ownership) timer is a
 	  watchdog timer that will reboot the machine after its second
 	  expiration. The expiration time can be configured by commandline
