--- a/drivers/char/watchdog/Kconfig
+++ b/drivers/char/watchdog/Kconfig
@@ -1,5 +1,5 @@
 #
-# Character device configuration
+# Watchdog device configuration
 #
 
 menu "Watchdog Cards"
@@ -132,7 +132,7 @@ config ACQUIRE_WDT
 	  This driver is like the WDT501 driver but for different hardware.
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
-	  The module is called pscwdt.  If you want to compile it as a
+	  The module is called acquirewdt.  If you want to compile it as a
 	  module, say M here and read <file:Documentation/modules.txt>.  Most
 	  people will say N.
 
@@ -179,7 +179,7 @@ config SA1100_WATCHDOG
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
 	  If you want to compile it as a module, say M here and read
-	  Documentation/modules.txt. The module will be called sa1100_wdt.
+	  <file:Documentation/modules.txt>. The module will be called sa1100_wdt.
 
 config EUROTECH_WDT
 	tristate "Eurotech CPU-1220/1410 Watchdog Timer"
@@ -203,7 +203,7 @@ config IB700_WDT
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
 	  The module is called ib700wdt. If you want to compile it as a
-	  module, say M here and read Documentation/modules.txt. Most people
+	  module, say M here and read <file:Documentation/modules.txt>. Most people
 	  will say N.
 
 config I810_TCO
@@ -277,7 +277,7 @@ config W83877F_WDT
 
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
-	  The module is called mixcomwd.  If you want to compile it as a
+	  The module is called w83877f_wdt.  If you want to compile it as a
 	  module, say M here and read <file:Documentation/modules.txt>.  Most
 	  people will say N.
 
@@ -295,10 +295,6 @@ config MACHZ_WDT
 	  inserted in and removed from the running kernel whenever you want).
 	  The module is called machzwd.  If you want to compile it as a
 	  module, say M here and read <file:Documentation/modules.txt>.
-
-config W83877F_WDT
-	tristate "W83877F Computer Watchdog"
-	depends on WATCHDOG
 
 config SC520_WDT
 	tristate "AMD Elan SC520 processor Watchdog"
@@ -336,7 +332,7 @@ config ALIM7101_WDT
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
 	  The module is called alim7101_wdt.  If you want to compile it as a
-	  module, say M here and read Documentation/modules.txt.  Most
+	  module, say M here and read <file:Documentation/modules.txt>.  Most
 	  people will say N.
 
 config SC1200_WDT
@@ -351,7 +347,7 @@ config SC1200_WDT
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
 	  The module is called sc1200wdt.  If you want to compile it as a
-	  module, say M here and read Documentation/modules.txt.  Most
+	  module, say M here and read <file:Documentation/modules.txt>.  Most
 	  people will say N.
 
 config WAFER_WDT
@@ -364,8 +360,8 @@ config WAFER_WDT
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
 	  If you want to compile it as a module, say M here and read
-	  Documentation/modules.txt. The module will be called
-	  wafer5823wdt.o
+	  <file:Documentation/modules.txt>. The module will be called
+	  wafer5823wdt.
 
 config CPU5_WDT
 	tristate "SMA CPU5 Watchdog"
@@ -374,7 +370,7 @@ config CPU5_WDT
 	  TBD.
 	  This driver is also available as a module ( = code which can be
 	  inserted in and removed from the running kernel whenever you want).
-	  The module is called cpu5wdt.o.  If you want to compile it as a
+	  The module is called cpu5wdt.  If you want to compile it as a
 	  module, say M here and read <file:Documentation/modules.txt>.
 
 endmenu
